--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -2,17 +2,20 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav"
+    android:id="@+id/root_nav"
     app:startDestination="@id/splashscreenFragment">
 
     <fragment
         android:id="@+id/splashscreenFragment"
         android:name="com.example.simple_dictionary.presenter.splashscreen.SplashscreenFragment"
-        tools:layout="@layout/splashscreen_fragment" >
+        tools:layout="@layout/splashscreen_fragment">
 
         <action
             android:id="@+id/toSearchFragment"
-            app:destination="@id/searchFragment" />
+            app:destination="@id/searchFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/root_nav"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
