--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/splashscreenFragment"
-        android:name="com.example.simple_dictionary.presenter.splashscreen.SplashscreenFragment"
+        android:name="com.example.simple_dictionary.splashscreen.presenter.SplashscreenFragment"
         tools:layout="@layout/splashscreen_fragment">
 
         <action
@@ -20,7 +20,7 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.simple_dictionary.presenter.search.SearchFragment"
+        android:name="com.example.simple_dictionary.search.presenter.SearchFragment"
         tools:layout="@layout/search_fragment" />
 
 </navigation>
