--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -11,6 +11,10 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="TextView.Black.18sp" parent="@style/TextView.Black">
+        <item name="android:textSize">18sp</item>
+    </style>
+
 
     <style name="TextView.Regular" parent="@style/Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/roboto_regular</item>
