--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
 
     <color name="traffic_black">#1E1E1E</color>
     <color name="gray">#808080</color>
+    <color name="smoky_white">#F5F5F5</color>
+    <color name="jet">#212121</color>
 </resources>
