--- a/app/src/main/res/layout/common_click_arrow_item.xml
+++ b/app/src/main/res/layout/common_click_arrow_item.xml
@@ -11,22 +11,22 @@
     android:paddingBottom="18dp">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/translationTitleText"
+        android:id="@+id/headerText"
         style="@style/TextView.Black.14sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/search_detail_definition_label"
+        android:text="@string/search_detail_other_label"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/meaningText"
+        android:id="@+id/descriptionText"
         style="@style/TextView.Regular.14sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toStartOf="@id/actionImage"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/translationTitleText"
+        app:layout_constraintTop_toBottomOf="@id/headerText"
 
         tools:text="A trivial lie." />
 
@@ -38,7 +38,7 @@
         android:background="?attr/selectableItemBackground"
         android:padding="12dp"
         android:src="@drawable/ic_arrow_forward_24"
-        app:layout_constraintBottom_toBottomOf="@id/meaningText"
+        app:layout_constraintBottom_toBottomOf="@id/descriptionText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/meaningText" />
+        app:layout_constraintTop_toTopOf="@id/descriptionText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
