--- a/app/src/main/res/layout/common_click_arrow_item.xml
+++ b/app/src/main/res/layout/common_click_arrow_item.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="30dp"
-    android:layout_marginEnd="30dp"
+    android:background="?attr/selectableItemBackground"
     android:orientation="vertical"
+    android:paddingStart="30dp"
     android:paddingTop="18dp"
+    android:paddingEnd="30dp"
     android:paddingBottom="18dp">
 
     <com.google.android.material.textview.MaterialTextView
@@ -35,7 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="13dp"
-        android:background="?attr/selectableItemBackground"
         android:padding="12dp"
         android:src="@drawable/ic_arrow_forward_24"
         app:layout_constraintBottom_toBottomOf="@id/descriptionText"
