--- a/app/src/main/res/drawable/shape_rect_center_4dp.xml
+++ b/app/src/main/res/drawable/shape_rect_center_4dp.xml
@@ -4,6 +4,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/traffic_black" />
+        android:color="?attr/colorPrimary" />
 
 </shape>
