--- a/app/src/main/res/drawable/shape_round_rect_right_4dp.xml
+++ b/app/src/main/res/drawable/shape_round_rect_right_4dp.xml
@@ -7,6 +7,6 @@
         android:topRightRadius="4dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/traffic_black" />
+        android:color="?attr/colorPrimary" />
 
 </shape>
